--- a/Capitulo01/Views/Departamento/Criar.cshtml
+++ b/Capitulo01/Views/Departamento/Criar.cshtml
@@ -6,14 +6,31 @@
     <a class="btn btn-primary" asp-action="Index">Voltar ao início</a>
 </div>
 
-<form asp-action="Criar">
-
-    <div asp-validation-summary="ModelOnly"></div>
-    <div class="mb-3">
-        <label for="InputNome" class="form-label">Nome:</label>
-        <input type="text" asp-for="Nome" class="form-control" id="InputNome" placeholder="Digite o nome do departamento">
-        <span asp-validation-for="Nome" class="text-danger"></span>
+<div class="card-block">
+    <div class="card-header text-white bg-danger text-center h1">
+        Registrando um novo departamento
     </div>
-    <input type="submit" value="Create" class="btn btn-success">
+    <div class="card-body">
+        <form asp-action="Criar">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Nome" class="control-label"></label>
+                <input asp-for="Nome" class="form-control" />
+                <span asp-validation-for="Nome" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="InstituicaoId" class="control-label"></label>
+                <select asp-for="InstituicaoId" class="form-control" asp-items="@(new SelectList(ViewBag.Instituicoes, "Id", "Nome"))"></select>
+                <span asp-validation-for="InstituicaoId" class="text-danger"></span>
+            </div>
+            <div class="form-group text-center h3 mt-4">
+                <input type="submit" value="Registrar Departamento" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+    <div class="card-footer bg-dark text-center text-white">
+        Informe os dados acima e/ou clique em um dos botões de ação
+    </div>
+</div>
 
-</form>
+
